--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,14 @@ ul, ol{
     font-size: 18px;
     text-transform: uppercase;
 }
+.logo-accent2{
+    font-family:'Raleway', sans-serif;
+    font-weight: 700;
+    color: #FFFFFF;
+    line-height: 1.14;
+    font-size: 18px;
+    text-transform: uppercase;
+}
 .navigation{
     color:#2E2F42;
     font-weight: 500;
@@ -67,4 +75,30 @@ ul, ol{
     font-size: 36px;
     line-height: 1.11111111111;
     text-align: center;
+}
+.workers{
+    background-color: #FFFFFF;
+}
+.workers > h3{
+ font-size: 20px;
+ font-weight: 500;
+ text-align: center;
+ line-height: 1.2;
+}
+.workers > .profession{
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    line-height: 1.5;
+}
+
+.slogan{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #FFFFFF;
+}
+
+.footer{
+    background-color: #2E2F42;
 }
