features  section changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ ul, ol{
     background-color: #404BBF;
 }
 
-.feautures-text{
+.features-text{
  font-size: 16px;
  font-weight: 500;
  line-height: 1.2;
